--- a/src/acronymes.tex
+++ b/src/acronymes.tex
@@ -6,7 +6,7 @@
 \acrodef{OSC}{Open Sound Control}
 \acrodef{NTP}{Network Time Protocol}
 \acrodef{PTP}{Precision Time Protocol}
-
+\acrodef{GPIO}{General-Purpose Input/Output}
 \acrodef{PNML}{Petri Net Markup Language}
 
 \acrodef{CRR}{Conservatoire à rayonnement régional}
