--- a/src/glossaire.tex
+++ b/src/glossaire.tex
@@ -43,3 +43,21 @@
 	name={algèbre de processus},
 	description={un ensemble de méthodes formalisées permettant de modéliser des systèmes répartis et concurrents}
 }
+
+\newglossaryentry{bigdata}
+{
+	name={Big Data},
+	description={des ensembles de données extrêmement volumineux et difficiles à gérer par des méthodes standard, comme par exemple les résultats d'expériences scientifiques qui collectent sur une longue durée à court intervalle, ou bien les bases de données de sites comme \brand{Google}, \brand{Wikipédia}\dots}
+}
+
+\newglossaryentry{mutex}
+{
+	name=mutex,
+	description={une méthode pour synchroniser des agents agissant sur les mêmes données, permettant d'assurer la correction de l'exécution d'un algorithme réparti}	
+}
+
+\newglossaryentry{logiquedehoare}
+{
+	name={logique de Hoare},
+	description={un ensemble de règles de logique permettant de prouver la correction d'un logiciel}
+}
