--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -322,3 +322,119 @@ ISSN={1530-1311},}
 	year={2012},
 	publisher={IGI Global Snippet}
 }
+
+@article{kosar2009paradigm,
+	title = "A new paradigm: Data-aware scheduling in grid computing ",
+	journal = "Future Generation Computer Systems ",
+	volume = "25",
+	number = "4",
+	pages = "406 - 413",
+	year = "2009",
+	note = "",
+	issn = "0167-739X",
+	doi = "http://dx.doi.org/10.1016/j.future.2008.09.006",
+	url = "http://www.sciencedirect.com/science/article/pii/S0167739X08001520",
+	author = "Tevfik Kosar and Mehmet Balman",
+	keywords = "Grid computing",
+	keywords = "Data-intensive applications",
+	keywords = "Data-aware scheduling",
+	keywords = "Data placement",
+	keywords = "Stork "
+}
+
+@INPROCEEDINGS{baehni2004dependable, 
+	author={Baehni, S. and Eugster, P.T. and Guerraoui, R.}, 
+	booktitle={Dependable Systems and Networks, 2004 International Conference on}, 
+	title={Data-aware multicast}, 
+	year={2004}, 
+	month={June}, 
+	pages={233-242}, 
+	keywords={communication complexity;distributed processing;information dissemination;multicast communication;data-aware multicast algorithm;event dissemination reliability;information dissemination;information flow;information processing;message complexity;peer-to-peer event dissemination;topic-based publish-subscribe system;Analytical models;Broadcasting;Electric breakdown;Laboratories;Maintenance;Multicast algorithms;Publish-subscribe;Subscriptions}, 
+	doi={10.1109/DSN.2004.1311893},
+}
+
+@article{jeon2014fully,
+	title={Fully Distributed Algorithms for Minimum Delay Routing Under Heavy Traffic},
+	author={Jeon, S and Jung, Kyomin and Chang, Hyunseok},
+	year={2014},
+	publisher={IEEE}
+}
+
+@article{aoxue2014distributed,
+author = {Aoxue Luo and Jiannong Cao and Jiebin Zhang},
+title = {Distributed Mutual Exclusion Algorithms for Intersection Traffic Control},
+journal ={IEEE Transactions on Parallel and Distributed Systems},
+volume = {99},
+number = {PrePrints},
+issn = {1045-9219},
+year = {2014},
+pages = {1},
+doi = {http://doi.ieeecomputersociety.org/10.1109/TPDS.2013.2297097},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
+}
+
+@inproceedings{druagoi2014logic,
+	title={A Logic-Based Framework for Verifying Consensus Algorithms},
+	author={Dr{\u{a}}goi, Cezara and Henzinger, Thomas A and Veith, Helmut and Widder, Josef and Zufferey, Damien},
+	booktitle={Verification, Model Checking, and Abstract Interpretation},
+	pages={161--181},
+	year={2014},
+	organization={Springer}
+}
+
+@misc{formaldistributed,
+	title={Formal Methods in Concurrent and Distributed Systems},
+	howpublished={\url{http://www.cs.uic.edu/~sistla/talks/VMCAI09.pdf}},
+	note={Accédé le 9 Mai 2014}
+}
+
+@incollection{mcmillan2014verification,
+	year={2014},
+	isbn={978-3-642-54012-7},
+	booktitle={Verification, Model Checking, and Abstract Interpretation},
+	volume={8318},
+	series={Lecture Notes in Computer Science},
+	editor={McMillan, KennethL. and Rival, Xavier},
+	doi={10.1007/978-3-642-54013-4_10},
+	title={A Logic-Based Framework for Verifying Consensus Algorithms},
+	url={http://dx.doi.org/10.1007/978-3-642-54013-4_10},
+	publisher={Springer Berlin Heidelberg},
+	author={Drăgoi, Cezara and Henzinger, ThomasA. and Veith, Helmut and Widder, Josef and Zufferey, Damien},
+	pages={161-181}
+}
+
+@inproceedings{jezequel2014message,
+	title={Message-Passing Algorithms for the Verification of Distributed Protocols},
+	author={Jezequel, Lo{\"\i}g and Esparza, Javier},
+	booktitle={Verification, Model Checking, and Abstract Interpretation},
+	pages={222--241},
+	year={2014},
+	organization={Springer}
+}
+
+@phdthesis{hosseinabadi2014exploiting,
+	title={Exploiting wireless broadcast property to improve performance of distributed algorithms and mac protocols in wireless networks},
+	author={Hosseinabadi, Ghazale},
+	year={2014},
+	school={University of Illinois at Urbana-Champaign}
+}
+
+@inproceedings{lim2013flocklab,
+	title={FlockLab: A testbed for distributed, synchronized tracing and profiling of wireless embedded systems},
+	author={Lim, Roman and Ferrari, Federico and Zimmerling, Marco and Walser, Christoph and Sommer, Philipp and Beutel, Jan},
+	booktitle={Proceedings of the 12th international conference on Information processing in sensor networks},
+	pages={153--166},
+	year={2013},
+	organization={ACM}
+}
+
+@article{lamport1977proving,
+	title={Proving the correctness of multiprocess programs},
+	author={Lamport, Leslie},
+	journal={Software Engineering, IEEE Transactions on},
+	number={2},
+	pages={125--143},
+	year={1977},
+	publisher={IEEE}
+}
