--- a/src/problematique.tex
+++ b/src/problematique.tex
@@ -5,7 +5,15 @@ Le stage s'est déroulé du deux février au treize juin, dans les bâtiments du
 J'ai rencontré mes tuteurs, Mme. Desainte-Catherine et M. Chaumette, de manière très régulière, quasiment chaque semaine, pour faire un point sur mon avancement.
 
 \section{Projet OSSIA}
-Le stage s'inscrit dans le cadre du projet \ac{OSSIA}.
+Le stage s'inscrit dans le cadre du projet \brand{ANR} \ac{OSSIA}. Ce projet, démarré en 2012, apporte une réponse aux questions posées lors du projet \brand{ANR Virage}, qui avait pour but de dresser un état des lieux des besoins et pratiques en terme de contrôle et d'écriture dans le cas des contenus en temps réel, puis d'établir un cahier des charges pour une solution unificatrice pour la conception de scénarios, et l'écriture du temps dans un cadre intermédia.
+
+Des acteurs d'origines diverses participent au projet \ac{OSSIA}.
+
+\begin{itemize}
+	\item Des laboratoires : \ac{LaBRI}, \ac{GMEA}
+\end{itemize} 
+
+
 (TODO historique).
 \begin{mydef}
 Scénario
@@ -16,7 +24,14 @@ Processus
 \end{mydef}
 
 \subsection{Logiciel i-score}
-Le logiciel i-score est en développement depuis plusieurs années, et comporte l'héritage de plusieurs autres logiciels et paradigmes qui ont été développé avant lui (TODO figure héritage).
+Le logiciel i-score est en développement depuis plusieurs années, et comporte l'héritage de plusieurs autres logiciels et paradigmes qui ont été développé avant lui, comme visible en figure \ref{fig:heritageIScore}.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.4]{images/iscoreHeritage.png}
+	\caption{Les racines du logiciel i-score}
+	\label{fig:heritageIScore}
+\end{figure}
 
 Actuellement, il incarne à la fois l'outil permettant d'écrire les scénarios, et de les exécuter.
 
