--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -438,3 +438,12 @@ address = {Los Alamitos, CA, USA},
 	year={1977},
 	publisher={IEEE}
 }
+
+@inproceedings{hogue2014ossia,
+	title={OSSIA : Open Scenario System for Interactive Applications},
+	author={De la Hogue, Théo and Baltazar, Pascal and Desainte-Catherine, Myriam and Chao, Jaime and Bossut, Clément},
+	organization={JIM},
+	year={2014}
+}
+	
+	
