--- a/src/acronymes.tex
+++ b/src/acronymes.tex
@@ -1,6 +1,9 @@
 \acrodef{LaBRI}{Laboratoire Bordelais de Recherche en Informatique}
 \acrodef{SCRIME}{Studio de Création et de Recherche en Musique Électro-acoustique}
 \acrodef{OSSIA}{Open Scenario System for Interactive Application}
+\acrodef{GMEA}{Groupe de Musique Électro-Acoustique d'Albi-Tarn}
+\acrodef{ENJMIN}{École Nationale du Jeu et des Médias Interactifs}
+\acrodef{CSP}{Constraint Satisfaction Problem}
 \acrodef{API}{Application Programmation Interface}
 \acrodef{IPB}{Institut Polytechnique de Bordeaux}
 \acrodef{OSC}{Open Sound Control}
