--- a/src/formalisation/preuves.tex
+++ b/src/formalisation/preuves.tex
@@ -17,7 +17,10 @@ Soit $p$ un segment, et soit $s$ un segment attenant à $p$ que l'on déplace su
 
 Comme les nœuds de $p$ et $s$ sont séparés par un délai de transmission d'information $\delta$, quand la $\beta$-transition s'exécute, l'information arrive en place d'entrée de $D$ à $t$ car $t - \delta + \delta = t$.   
 
-\subsection{L'opération de recombinaison est inverse de celle du déplacement}
+\subsection{Inversibilité du processus}
+\begin{myth}
+	L'opération de recombinaison est inverse de celle du déplacement.
+\end{myth}
 Soit $p$ un segment, et soit $s$ un segment attenant à $p$ que l'on déplace sur un nœud différent de celui de $p$ par le processus décrit précédemment.
 
 $p$ est donc précédé d'un $\alpha$-segment et est suivi d'un $\beta$-segment menant à $s$
