--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -445,5 +445,16 @@ address = {Los Alamitos, CA, USA},
 	organization={JIM},
 	year={2014}
 }
-	
+
+@report{meyssonnier2013analyse,
+	author = {Thomas Meyssonnier},
+	title = {Analyse des relations entre création
+	artistique, modélisation mathématique
+	et implémentation logicielle dans la
+	problématique de l'écriture de
+	structures temporelles},
+	institution = {LaBRI},
+	year={2013}
+}
+
 	
